user specifies modules, not files
So the user can say what modules they want, and the system will go
find the filenames.  This works for installation.

Changed some FilePaths back into Strings

20040605193904-6d90f-e7422ed152b93a724611cd9a47882222c539b413.gz

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,8 @@
 all:
 	ghc -Wall --make -i../:/usr/local/src/HUnit-1.0 Setup.hs -o setup
+clean:
+	rm *.o setup *.hi
+check: all
+	./setup configure --prefix=/tmp/foo
+	./setup install
+	ls /tmp/foo*
