install-prefix and friends
* enumerated some imports
* used --install-prefix flag
* implemented conditional register at install time
** breaks install for two reasons:
1) install will try to register
2) register is broken
* Register is broken for three reasons:
1) --user and --system aren't implemented
2) install doesn't put the files in the right place (prefix/lib/package-version)
3) install doesn't put the .hi and .o files in the right place.

But you can still use install-prefix to test.

20040606232915-6d90f-409b2d04421e7eb98fe8e6906758d0564be58e19.gz

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,8 +3,11 @@ all:
 clean:
 	rm *.o setup *.hi
 check: all
-	./setup configure --prefix=/tmp/foo
+	./setup configure --user --prefix=/tmp/foo
+	./setup install --install-prefix=/tmp/bar
+	ls /tmp/bar*
+	# install w/ register!
 	./setup install
-	ls /tmp/foo*
+#	ls /tmp/foo*
 	./setup sdist
 	ls dist
