mostly fiddle with target file locations (prefixes) and tests
** Added tests to look for .o and .hi files, as well as libHStest in destdir
** Added a handful of tests for sdist, and checked to see if sdist directory exists
** moved temporary sdist location from dist/build to dist/src
** added a prefix to several of the commands, so they know where to put files
*** build  -- dist/build
*** install -- both dist/build and install-prefix
*** sdist -- dist/src and target directory, dist
** chaged ar command to output libHS file in correct place

20040613010142-6d90f-dbc20315b883f05ed35a0910bae51426692f8184.gz

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,10 @@
 all:
 	ghc -Wall --make -i../:/usr/local/src/HUnit-1.0 Setup.hs -o setup
 clean:
-	rm *.o setup *.hi
+	rm -f setup a.out
+	rm -rf ,tmp dist
+	find . -name "*.o" |xargs rm -f
+	find . -name "*.hi" |xargs rm -f
 check: all
 	./setup configure --user --prefix=/tmp/foo
 	./setup install --install-prefix=/tmp/bar
