fixed tests for new A location
20040615013351-6d90f-82d1caab7a8afee57d5ce35f1ee567e61ff5a172.gz

--- a/test/A/Makefile
+++ b/test/A/Makefile
@@ -1,5 +1,5 @@
 all:
-	ghc -Wall --make -i../:/usr/local/src/HUnit-1.0 Setup.hs -o setup
+	ghc -Wall --make -i../../:/usr/local/src/HUnit-1.0 Setup.hs -o setup
 clean:
 	rm -f setup a.out
 	rm -rf ,tmp dist
