Various Makefile hackery to make local install work better
20040617205617-153e8-229375372397ba511ed88448e9c8f176fdcde039.gz

--- a/test/HUnit-1.0/Makefile
+++ b/test/HUnit-1.0/Makefile
@@ -1,5 +1,5 @@
 all:
-	ghc -Wall --make -i../../:/usr/local/src/HUnit-1.0 Setup.lhs -o setup
+	ghc -Wall --make -i../../:src Setup.lhs -o setup
 semiclean:
 	rm -rf ,tmp dist
 	find . -name "*.o" |xargs rm -f
