--- a/test/A/Makefile
+++ b/test/A/Makefile
@@ -1,8 +1,8 @@
 all:
-	ghc -Wall --make -i../../:/usr/local/src/HUnit-1.0 Setup.hs -o setup
+	ghc -Wall --make -i../../:/usr/local/src/HUnit-1.0 Setup.lhs -o setup
 clean:
 	rm -f setup a.out
-	rm -rf ,tmp dist
+	rm -rf ,tmp dist ,tmp2
 	find . -name "*.o" |xargs rm -f
 	find . -name "*.hi" |xargs rm -f
 check: all
