added building executables. that test case now passes
20040722202645-6d90f-ad89abff22e26d758a43a1c6824e7b557e1f5916.gz

--- a/test/A/Makefile
+++ b/test/A/Makefile
@@ -1,7 +1,7 @@
 all:
 	ghc -Wall --make -i../../:/usr/local/src/HUnit-1.0 Setup.lhs -o setup
 clean:
-	rm -f setup a.out
+	rm -f setup a.out dist/build/testA
 	rm -rf ,tmp dist ,tmp2
 	find . -name "*.o" |xargs rm -f
 	find . -name "*.hi" |xargs rm -f
