tweak makefile. wtf is up w/ MainB?
20040723135239-6d90f-3a151714b7f1be98a13f1568ae5ca8d385bdbf83.gz

--- a/test/wash2hs/Makefile
+++ b/test/wash2hs/Makefile
@@ -1,5 +1,5 @@
 all:
-	ghc -Wall --make -i../../:/../HUnit-1.0 Setup.lhs -o setup
+	ghc -Wall --make -i../../:../HUnit-1.0/src Setup.lhs -o setup
 clean:
 	rm -f setup
 	rm -rf ,tmp dist ,tmp2
