Get tests running again
20040725213942-153e8-410bd67d6afa13877749e31517999dd0f573c603.gz

--- a/test/HUnit-1.0/Makefile
+++ b/test/HUnit-1.0/Makefile
@@ -1,5 +1,6 @@
 all:
-	ghc -DDEBUG -Wall --make -i../../:src Setup.lhs -o setup
+	mkdir -p dist/tmp
+	ghc -Wall --make -odir dist/tmp -hidir dist/tmp -i../..:src Setup.lhs -o setup
 semiclean:
 	rm -rf ,tmp dist
 	find . -name "*.o" |xargs rm -f
