changed name of package to match Igloo's policy
20040729140302-6d90f-5f2f3afcff7d872f660693b33869bf43e7bf6cfb.gz

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: Isaac Jones <ijones@debian.org>
 Build-Depends: debhelper (>= 4.0.0), ghc6 (> 6.2)
 Standards-Version: 3.6.0
 
-Package: libhaskell-cabal-ghc6-dev
+Package: libghc6-cabal-dev
 Section: devel
 Architecture: any
 Description: Haskell Common Architecture for Building Applications and Libraries
