updates_to_achieve_first_working_debianTemplate
I removed a bunch of useless(?) stuff in the debianTemplates
directory. And renamed some files. Seems that the dh_make template
stuff is pretty basic -- it just substitutes the string 'package' in a
filename with the name of the package.

I also modified the rules file -- among other things 'clean' required
'setup'. But setup was not built yet. The currently solution seems
like a bit of a hack, but does at least generate a package.

Also, I use dh_installdocs to install the installed-pkg-config instead
of copying it explicitly in the rules file. Added a compat file
(level 4), and a default changelog.

commented out the Depends line in the control file, because there is
currently only a -dev package.

To invoke the debianTemplate stuff I do:

dh_make -d -t /full/path/to/debianTemplate

The -d keeps dh_make from installing a bunch of useless stuff in the
debian directory, but it also makes it so that the copyright file does
not get created, even if you specify -c on the command-line. I think
that should be considered a bug.

20040731023259-7810c-5243a40593a89b0cc45d9eda2fa79c675421c8e6.gz

--- a/debianTemplate/control
+++ b/debianTemplate/control
@@ -7,7 +7,7 @@ Standards-Version: #POLICY#
 Package: libghc6-#PACKAGE#-dev
 Section: devel
 Architecture: any
-Depends: #PACKAGE#BROKEN (= ${Source-Version})
+#Depends: #PACKAGE# (= ${Source-Version})
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
 
