--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,18 @@
 Source: haskell-cabal
 Priority: optional
-Maintainer: Isaac Jones <ijones@debian.org>
-Build-Depends: debhelper (>= 4.0.0), ghc6 (> 6.2)
+Maintainer: John Goerzen <jgoerzen@complete.org>
+Build-Depends: debhelper (>= 4.0.0), ghc6 (>= 6.2.1), ghc6 (<< 6.2.2), ghc5 (>= 5.04.3), ghc5 (<< 5.04.4)
 Standards-Version: 3.6.0
 
 Package: libghc6-cabal-dev
 Section: devel
 Architecture: any
+Depends: ghc6 (>= 6.2.1), ghc6 (<< 6.2.2)
 Description: Haskell Common Architecture for Building Applications and Libraries
- Haskell Common Architecture for Building Applications and Libraries
+ The Haskell Cabal is a system for building and installing Haskell
+ programs and libraries.  It is aware of multiple different compilers
+ and can handle them without trouble.
+ .
+ This package will provide the infrastructure necessary to build
+ Cabalized packages on Debian machines, or to Debianize those packages.
+
