--- a/debian/rules
+++ b/debian/rules
@@ -6,11 +6,28 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+GHCVERSION=6.2.1
+GHCPATH=/usr/lib/ghc-$(GHCVERSION)/bin
+PATH:=$(GHCPATH):$(PATH)
 
-
+export PATH
 
 CFLAGS = -Wall -g
-CABAL_BIN=libghc6-cabal-dev
+LIBPATH=/usr/lib/haskell-packages/$(1)
+PACKAGE=lib$(1)-cabal-dev
+FLAVORS=ghc6 
+
+define build_flavor
+echo BUILDING FOR $(1)
+-./setup clean
+rm -f .*config*
+./setup configure --prefix=$(LIBPATH) --with-compiler=/usr/bin/$(1)
+./setup build
+mkdir -p $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+./setup install --install-prefix=$(CURDIR)/debian/$(PACKAGE)$(LIBPATH)
+cp .installed-pkg-config $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)/installed-pkg-config
+
+endef
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
@@ -34,8 +51,7 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	make setup #bootstrap
-	./setup configure --prefix=/usr --ghc
+	make setup
 	touch configure-stamp
 
 
@@ -44,7 +60,6 @@ build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	./setup build
 	touch build-stamp
 
 clean:
@@ -55,6 +70,7 @@ clean:
 	# Add here commands to clean up after the build process.
 	-$(MAKE) clean
 
+	rm -f .*config*
 	dh_clean 
 
 install: build
@@ -63,11 +79,7 @@ install: build
 	dh_clean -k 
 	dh_installdirs
 
-	# Add here commands to install the package into debian/$(CABAL_BIN)
-	mkdir -p $(CURDIR)/debian/$(CABAL_BIN)/usr/share/doc/$(CABAL_BIN)
-	./setup install --install-prefix=$(CURDIR)/debian/$(CABAL_BIN)/usr
-	cp .installed-pkg-config $(CURDIR)/debian/$(CABAL_BIN)/usr/share/doc/$(CABAL_BIN)/installed-pkg-config
-
+	$(foreach tgt,$(FLAVORS),$(call build_flavor,$(tgt)))
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -77,9 +89,9 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_installexamples
+	dh_installchangelogs -a
+	dh_installdocs -a
+	dh_installexamples -a
 #	dh_install
 #	dh_installmenu
 #	dh_installdebconf	
@@ -90,19 +102,19 @@ binary-arch: build install
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
+	dh_installman -a
+	dh_link -a
+	dh_strip -a
+	dh_compress -a
+	dh_fixperms -a
 #	dh_perl
 #	dh_python
 #	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install configure
