cleaned up makefiles for -cpp option
20041103051450-6d90f-0d3a9c7fc39e88ac1f7f105dd3c8ab6a28453dc9.gz

--- a/test/HUnit-1.0/Makefile
+++ b/test/HUnit-1.0/Makefile
@@ -1,6 +1,6 @@
 all:
 	mkdir -p dist/tmp
-	ghc --make -odir dist/tmp -hidir dist/tmp -i../.. Setup.lhs -o setup
+	ghc -cpp --make -odir dist/tmp -hidir dist/tmp -i../.. Setup.lhs -o setup
 semiclean:
 	rm -rf ,tmp dist
 	find . -name "*.o" |xargs rm -f
