--- a/test/A/Makefile
+++ b/test/A/Makefile
@@ -1,6 +1,6 @@
 all:
 	mkdir -p dist/tmp
-	ghc --make -odir dist/tmp -hidir dist/tmp -i../.. Setup.lhs -o setup
+	ghc -cpp --make -odir dist/tmp -hidir dist/tmp -i../.. Setup.lhs -o setup
 clean:
 	rm -f setup a.out dist/build/testA
 	rm -rf ,tmp dist ,tmp2
