ugly preprocessing stuff to prevent standard GHC build from trying to build this
20041207072341-6d90f-d3361638157c898b694a8b46d6fe2404c65b9daa.gz

--- a/Makefile.upstream
+++ b/Makefile.upstream
@@ -117,7 +117,7 @@ hunitInstall-stamp: hunit-stamp
 
 moduleTest:
 	mkdir -p dist/debug
-	ghc $(GHCFLAGS) $(ISPOSIX) -DDEBUG -odir dist/debug -hidir dist/debug -idist/debug/:.:test/HUnit-1.0/src Distribution/ModuleTest -o moduleTest
+	ghc -main-is Distribution.ModuleTest.main $(GHCFLAGS) $(ISPOSIX) -DDEBUG -odir dist/debug -hidir dist/debug -idist/debug/:.:test/HUnit-1.0/src Distribution/ModuleTest -o moduleTest
 
 tests: moduleTest clean
 	cd test/A && make clean
