--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -4,7 +4,7 @@ Copyright: 2003-2005, Isaac Jones
 License: BSD3
 Author: Isaac Jones <ijones@syntaxpolice.org>
 Maintainer: Isaac Jones <ijones@syntaxpolice.org>
-Package-URL: http://www.haskell.org/cabal/
+Homepage: http://www.haskell.org/cabal/
 Description:
 	Common Architecture for Building Applications and Libraries:
 	a framework defining a common interface for authors to more
