build-depends on posix?
20050115222441-6d90f-fe24e4feb7a4cb01800418fd4433501d00bb1794.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -1,6 +1,7 @@
 Name: Cabal
 Version: 0.3
 Copyright: 2003-2005, Isaac Jones
+Build-Depends: posix
 License: BSD3
 Author: Isaac Jones <ijones@syntaxpolice.org>
 Maintainer: Isaac Jones <ijones@syntaxpolice.org>
