added features to ./setup haddock
added title to ./setup haddock
added prolog to ./setup haddock
all commands take the --verbose argument, so fixed the parser
uncommented hooks stuff I hid for the 0.4 release


20050117234132-6d90f-eecef3c48d2be537f65e38c8ae6d46a5cc1be2e3.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -7,8 +7,8 @@ Author: Isaac Jones <ijones@syntaxpolice.org>
 Maintainer: Isaac Jones <ijones@syntaxpolice.org>
 Homepage: http://www.haskell.org/cabal/
 Description:
-	Common Architecture for Building Applications and Libraries:
-	a framework defining a common interface for authors to more
+	The Haskell Common Architecture for Building Applications and
+        Libraries: a framework defining a common interface for authors to more
 	easily build their Haskell applications in a portable way.
 	.
 	The Haskell Cabal is meant to be a part of a larger infrastructure
