INTERFACE CHANGES! rework of cabal hooks. much of this is from Krasimir
User hooks look like this now:
     preConf  :: Args -> ConfigFlags -> IO HookedBuildInfo,
     postConf :: IO ExitCode,

type HookedBuildInfo = (Maybe BuildInfo, [(String, BuildInfo)])

this means that only stuff in BuildInfo can be overridden.  A
buildinfo file now looks like this:

name: libraryname
include-dirs: /foo/bar, /bang/baz
extensions: CPP

executable: executablename
extensions: TemplateHaskell


20050130233424-6d90f-b383aaa28714fd88427cf043e1b42028d0df484d.gz

--- a/test/withHooks/Setup.buildinfo.in
+++ b/test/withHooks/Setup.buildinfo.in
@@ -1,4 +1,6 @@
-copyright: Copyright 2005 Happy New Year!!
-license: LGPL
-description: This program outputs very important information.
-exposed-modules: WithHooks
+name: withHooks
+include-dirs: /foo/bar, /bang/baz
+extensions: CPP
+
+executable: withHooks
+extensions: TemplateHaskell
