cvs pull from krasimir and ross, mostly hooks
  Move buildable, cc-options, ld-options, frameworks and hidden-modules
  fields into BuildInfo, so they can be overridden with local info.
  As a consequence executable-modules is replaced with hidden-modules.
  Perhaps other-modules would be a better name.

  No longer expect a name field at the head of the library stanza --
  it's redundant, and the pretty printer can't produce it.

  Another way to manage the mapping of component names to BuildInfo's
  would be to use the filesystem, i.e. look for <package>.buildinfo,
  <exename1>.buildinfo, <exename2>.buildinfo, etc, each parsing as a
  single BuildInfo.

  Change the postHook types

  Query system for "c:\Program Files"

  Add shell32 to extra-libs under Windows. It is required because
  SHGetFolderPath is called from Distribution.Simple.Configure now.
  


20050203052621-6d90f-856aa9139a9a4b16382fa9a27c6a563940341c71.gz

--- a/package.conf.in
+++ b/package.conf.in
@@ -1,3 +1,5 @@
+#include "ghcconfig.h"
+
 name:		PACKAGE
 version:	VERSION
 license:	BSD3
@@ -38,6 +40,9 @@ import-dirs:	IMPORT_DIR
 library-dirs:	LIB_DIR
 hs-libraries:   "HSCabal"
 extra-libs:
+#if defined(mingw32_HOST_OS) || defined(__MINGW32__) || defined(_MSC_VER)
+	     "shell32"
+#endif
 
 include-dirs:
 includes:
