cleaned up test cases. fixed small bugs
20050203062945-6d90f-ed3792b124cae24c1cfd6dd73b11f002512ba383.gz

--- a/test/depOnLib/test.cabal
+++ b/test/depOnLib/test.cabal
@@ -4,6 +4,6 @@ hs-source-dir: libs
 exposed-modules: A
 
 Executable: mainForA
-Executable-Modules: Main, A
+Hidden-Modules: Main, A
 hs-source-dir: mains
 Main-is: Main.hs
