Added support for preprocessors in the UserHooks.
Very simple, backward-compatible change.  Not sure how this never
happened before, it would be a shame to have worked on the
preprocessor interface and not exposed it to users at all.

Took this chance to move the test preprocessor out of the
PreProcessors module and into a test case.


20050210073229-6d90f-600a0c5b6a28fd7ffc036eb62ffb9789e7601881.gz

--- a/test/A/A.cabal
+++ b/test/A/A.cabal
@@ -1,6 +1,6 @@
 Name: test
 Version: 1.0
-Hidden-Modules: B.A, C
+Hidden-Modules: B.A
 Exposed-Modules: A
 C-Sources: hello.c, c_src/hello.c
 Extensions: ForeignFunctionInterface
