cvs pull from ross
  add flags arguments to post-hooks, and have defaultUserHooks use postConf
  instead of preConf.

  changes to package description fields, as discussed on the libraries list:
  
  * allow both License and License-File, which now correspond to different
    fields of Package Description.
  
  * add Synopsis.
  
  * rename Hidden-Modules as Other-Modules.

20050211215234-6d90f-8ad48a893a1a49d4778d5905796ff9f9a9d2ccd3.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -6,6 +6,7 @@ License: BSD3
 Author: Isaac Jones <ijones@syntaxpolice.org>
 Maintainer: Isaac Jones <ijones@syntaxpolice.org>
 Homepage: http://www.haskell.org/cabal/
+Synopsis: A framework for packaging Haskell software
 Description:
 	The Haskell Common Architecture for Building Applications and
         Libraries: a framework defining a common interface for authors to more
@@ -37,7 +38,7 @@ Exposed-Modules:
 	Distribution.Simple.SrcDist,
 	Distribution.Simple.Utils,
 	Distribution.Version
-Hidden-Modules:
+Other-Modules:
 	Distribution.GetOpt,
 	Distribution.Compat.Directory,
 	Distribution.Compat.Exception,
