fixed tests cases to match ross changes
20050211222524-6d90f-1f4b805ea34b02b8ef48d3ab45ac7f708a09868e.gz

--- a/test/HUnit-1.0/HUnit.cabal
+++ b/test/HUnit-1.0/HUnit.cabal
@@ -2,6 +2,6 @@ Name: HUnit
 Version: 1.0
 License: AllRightsReserved
 Build-Depends: haskell-src
-Hidden-Modules: HUnitText, HUnitLang, HUnitTestBase, Terminal, HUnitBase
+Other-Modules: HUnitText, HUnitLang, HUnitTestBase, Terminal, HUnitBase
 Exposed-Modules: HUnit
 HS-Source-Dir: src
