--- a/test/wash2hs/wash2hs.cabal
+++ b/test/wash2hs/wash2hs.cabal
@@ -5,7 +5,7 @@ Build-Depends: text
 
 executable: wash2hs
 hs-source-dir: hs
-hidden-Modules: WASHClean,  WASHExpression,  WASHGenerator,  WASHOut,
+Other-Modules: WASHClean,  WASHExpression,  WASHGenerator,  WASHOut,
                 WASHData,   WASHFlags,       WASHMain,       WASHParser,
                 WASHUtil
 main-is: WASHMain.hs
