--- a/test/A/A.cabal
+++ b/test/A/A.cabal
@@ -1,15 +1,15 @@
 Name: test
 Version: 1.0
-Hidden-Modules: B.A
+Other-Modules: B.A
 Exposed-Modules: A
 C-Sources: hello.c, c_src/hello.c
 Extensions: ForeignFunctionInterface
 
 Executable: testA
-Hidden-Modules: A, MainA
+Other-Modules: A, MainA
 Main-is: MainA.hs
 Extensions: OverlappingInstances
 
 Executable: testB
-Hidden-Modules: B.A, B.MainB
+Other-Modules: B.A, B.MainB
 Main-is: B/MainB.hs
