--- a/test/depOnLib/test.cabal
+++ b/test/depOnLib/test.cabal
@@ -4,6 +4,6 @@ hs-source-dir: libs
 exposed-modules: A
 
 Executable: mainForA
-Hidden-Modules: Main, A
+Other-Modules: Main, A
 hs-source-dir: mains
 Main-is: Main.hs
