added HSQL and various Distribution.Make bugfixes
20050212190527-6d90f-451fc4569f320f840dc259481945a33388c53c6f.gz

--- a/test/A/A.cabal
+++ b/test/A/A.cabal
@@ -1,5 +1,6 @@
 Name: test
 Version: 1.0
+synopsis: this package is really awesome.
 Other-Modules: B.A
 Exposed-Modules: A
 C-Sources: hello.c, c_src/hello.c
