starting to refactor test suite
20050214042329-6d90f-520d689442d36495f9d1a3c028a144dc317e8c81.gz

--- a/tests/HSQL/Makefile
+++ b/tests/HSQL/Makefile
@@ -4,9 +4,9 @@ COMPILERS =
 ifneq "$(GHC)" ""
 COMPILERS += ghc
 endif
-ifneq "$(HUGS)" ""
-COMPILERS += hugs
-endif
+# ifneq "$(HUGS)" ""
+# COMPILERS += hugs
+# endif
 
 #--------------------------------------------------------------------------
 # DIRECTORIES
