cvs pull from ross and simonMar
  Configure dependencies properly, by querying hc-pkg for the package list.

  We should pass the full package id (including version) to ghc now that
  we know it, not just the package name.

  buildHugs: use ppCpp (calling cpphs) instead of invoking cpp directly.

  Also removed the unused exeDependencies.

  Add --user flag to configure

  Doc setup configure --user/--global

  Minor doc tweaks

  Hugs only: use binary handles for copyFile

20050215151319-6d90f-c2feebc1fb3251e7b2f3f6a993e03d04d0f08258.gz

--- a/tests/wash2hs/wash2hs.cabal
+++ b/tests/wash2hs/wash2hs.cabal
@@ -1,7 +1,7 @@
 Name: Wash-2hs
 Version: 1.4.34
 License: BSD3
-Build-Depends: text
+Build-Depends: text, lang
 
 executable: wash2hs
 hs-source-dir: hs
