--- a/tests/A/A.cabal
+++ b/tests/A/A.cabal
@@ -7,10 +7,10 @@ C-Sources: hello.c, c_src/hello.c
 Extensions: ForeignFunctionInterface
 
 Executable: testA
-Other-Modules: A, MainA
+Other-Modules: A
 Main-is: MainA.hs
 Extensions: OverlappingInstances
 
 Executable: testB
-Other-Modules: B.A, B.MainB
+Other-Modules: B.A
 Main-is: B/MainB.hs
