fixed c-sources executables for GHC only
20050218084246-6d90f-9c1fa62fbff708de58b61b110b22ab2697c70c3d.gz

--- a/tests/A/A.cabal
+++ b/tests/A/A.cabal
@@ -9,6 +9,7 @@ Extensions: ForeignFunctionInterface
 Executable: testA
 Other-Modules: A
 Main-is: MainA.hs
+C-Sources: c_src/hello.c
 Extensions: OverlappingInstances
 
 Executable: testB
