cvs pull from Simon Marlow
  Clean up parsing & pretty-printing.
  
  Most list fields now have consistent syntax:
  
    - commas are optional
    - each element of the list is either
  	- a sequence of one or more non-space non-comma characters
  	- a quoted string in Haskell 98 lexical syntax
  
  The build-depends field still requires commas, because the elements
  can contain whitespace.
  
  I merged fieldGet/fieldShow in StanzaField into a single field for
  simplicity.


20050218175956-6d90f-3439d667b9016cf4e77a43861c15593fd89e1321.gz

--- a/package.conf.in
+++ b/package.conf.in
@@ -39,7 +39,7 @@ hidden-modules:
 import-dirs:	IMPORT_DIR
 library-dirs:	LIB_DIR
 hs-libraries:   "HSCabal"
-extra-libs:
+extra-libraries:
 #if defined(mingw32_HOST_OS) || defined(__MINGW32__) || defined(_MSC_VER)
 	     "shell32"
 #endif
@@ -47,10 +47,10 @@ extra-libs:
 include-dirs:
 includes:
 depends:	 	base
-extra-hugs-opts:
-extra-cc-opts:
-extra-ld-opts:
+hugs-options:
+cc-options:
+ld-options:
 framework-dirs:
-extra-frameworks:
+frameworks:
 haddock-interfaces:	HADDOCK_IFACE
 haddock-html:		HTML_DIR
