prepare for Debian release 0.5
20050219213701-6d90f-23caef8c04d315ef116284514f2d7001e9c73be8.gz

--- a/debian/rules
+++ b/debian/rules
@@ -24,8 +24,15 @@ rm -f .*config*
 ./setup configure --prefix=$(LIBPATH) --with-compiler=/usr/bin/$(1)
 ./setup build
 mkdir -p $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+cp $(CURDIR)/doc/API $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+cp $(CURDIR)/doc/users-guide $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
 ./setup copy --copy-prefix=$(CURDIR)/debian/$(PACKAGE)$(LIBPATH)
-cp .installed-pkg-config $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)/installed-pkg-config
+#generate the register and unregister scripts
+./setup register   --gen-script
+./setup unregister --gen-script
+# install them for later
+cp register.sh $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)/register.sh
+cp unregister.sh $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)/unregister.sh
 
 endef
 
