--- a/debian/rules
+++ b/debian/rules
@@ -24,8 +24,8 @@ rm -f .*config*
 ./setup configure --prefix=$(LIBPATH) --with-compiler=/usr/bin/$(1)
 ./setup build
 mkdir -p $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
-cp $(CURDIR)/doc/API $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
-cp $(CURDIR)/doc/users-guide $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+cp -r $(CURDIR)/doc/API $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+cp -r $(CURDIR)/doc/users-guide $(CURDIR)/debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
 ./setup copy --copy-prefix=$(CURDIR)/debian/$(PACKAGE)$(LIBPATH)
 #generate the register and unregister scripts
 ./setup register   --gen-script
