implemented check for required fields
As described in message to libraries@, except that because of the way
the parser is structured, I can't check for an altogether missing
license.  Instead I warn if they say AllRightsReserved.


20050222032824-6d90f-d70c580b9a211c0e580d364cf6e10574d4563f43.gz

--- a/tests/A/A.cabal
+++ b/tests/A/A.cabal
@@ -1,5 +1,7 @@
 Name: test
 Version: 1.0
+copyright: filler for test suite
+maintainer: Isaac Jones
 synopsis: this package is really awesome.
 Other-Modules: B.A
 Exposed-Modules: A
