--- a/tests/wash2hs/wash2hs.cabal
+++ b/tests/wash2hs/wash2hs.cabal
@@ -2,6 +2,9 @@ Name: Wash-2hs
 Version: 1.4.34
 License: BSD3
 Build-Depends: text, lang
+copyright: filler for test suite
+maintainer: filler for test suite
+synopsis: filler for test suite
 
 executable: wash2hs
 hs-source-dir: hs
