cvs pull: added LICENSE file
20050414144905-6d90f-b894f12c969e7b571f49e6100507e99cbc5a7742.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -3,6 +3,7 @@ Version: 0.6
 Copyright: 2003-2005, Isaac Jones
 Build-Depends: base, util
 License: BSD3
+License-File: LICENSE
 Author: Isaac Jones <ijones@syntaxpolice.org>
 Maintainer: Isaac Jones <ijones@syntaxpolice.org>
 Homepage: http://www.haskell.org/cabal/
