lots of changes, mostly from ross
  documentation updates from ross paterson
  - more accurate specification of package names
  - hs-source-dir -> hs-source-dirs in examples
  - setup clean removes a bit more
  - rearrange description of fields

  Version.hs: allow more spaces in version constraints

  Install.hs: add the exe extension when installing executables (reported by Brian Smith)
 
  test directory: add explicit dependencies on base

  Misc:
  Prefix error messages and warnings with the program name, and send them
  to stderr.  (Also moved some stuff from Distribution.Simple.Utils to
  Distribution.Simple.Build to avoid circular dependencies.)

  refactoring only: split Compiler type from Distribution.Setup,
  to reduce dependencies.

  Exclude DefaultSetup.lhs from the GHC build

  add JHC to the Compiler type

  refactored argument processing

  setup sdist --snapshot: append YYYYMMDD to the version for the bundle

  improved error messages (from Brian Smith):
  
  * attach source locations to messages when available
  
  * change some remaining error's do die.

  refactor defaultMainWorker

  split Distribution.Extension between Language.Haskell.Extension (just
  the type, which will also be useful when haskell-src-exts is merged)
  and Distribution.Compiler (mappings to compiler options).

  add Language.Haskell.Extension

  Simon marlow:  update defaults for prefix/libdir/bindir



20050628051544-6d90f-e5238094a0d5c5d60a6380bdd579dc4affd07c4f.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -19,6 +19,7 @@ Description:
 Category: Distribution
 Exposed-Modules:
         Distribution.Compat.ReadP,
+        Distribution.Compiler,
         Distribution.Extension,
         Distribution.InstalledPackageInfo,
         Distribution.License,
@@ -39,7 +40,8 @@ Exposed-Modules:
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
         Distribution.Compat.FilePath,
-        Distribution.Version
+        Distribution.Version,
+	Language.Haskell.Extension
 Other-Modules:
         Distribution.GetOpt,
         Distribution.Compat.Directory,
