--- a/tests/A/A.cabal
+++ b/tests/A/A.cabal
@@ -3,6 +3,7 @@ Version: 1.0
 copyright: filler for test suite
 maintainer: Isaac Jones
 synopsis: this package is really awesome.
+Build-Depends: base
 Other-Modules: B.A
 Exposed-Modules: A
 C-Sources: hello.c, c_src/hello.c
