--- a/tests/depOnLib/test.cabal
+++ b/tests/depOnLib/test.cabal
@@ -4,6 +4,7 @@ hs-source-dir: libs
 copyright: filler for test suite
 maintainer: filler for test suite
 synopsis: filler for test suite
+build-depends: base
 exposed-modules: A
 
 Executable: mainForA
