--- a/tests/withHooks/withHooks.cabal
+++ b/tests/withHooks/withHooks.cabal
@@ -3,6 +3,7 @@ Version: 1.0
 copyright: filler for test suite
 maintainer: filler for test suite
 synopsis: filler for test suite
+build-depends: base
 exposed-modules: Main, C, D
 
 Executable: withHooks
