tweakin  the changelog
20050718051804-6d90f-3419bccbad3203607981a2eee1e4b13bf4b2b389.gz

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: haskell-cabal
 Priority: optional
 Maintainer: Isaac Jones <ijones@debian.org>
-Build-Depends: debhelper (>= 4.0.0), ghc6 (>= 6.2.2), ghc6 (== 6.4)
+Build-Depends: debhelper (>= 4.0.0), ghc6 (>= 6.2.2), ghc6 (6.4)
 Standards-Version: 3.6.1
 Suggests: haddock, cpphs
 
