--- a/package.conf.in
+++ b/package.conf.in
@@ -43,7 +43,7 @@ library-dirs:	LIB_DIR
 hs-libraries:   "HSCabal"
 extra-libraries:
 #if defined(mingw32_HOST_OS) || defined(__MINGW32__) || defined(_MSC_VER)
-	     "shell32"
+	     "shfolder"
 #endif
 
 include-dirs:
