adding Program abstraction to cabal
20050930115803-6d90f-5993151f6376480fe9ed96ae504f5bb08cc49eef.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -24,6 +24,7 @@ Exposed-Modules:
         Distribution.InstalledPackageInfo,
         Distribution.License,
         Distribution.Make,
+        Distribution.Program,
         Distribution.Package,
         Distribution.PackageDescription,
         Distribution.ParseUtils,
